<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Approver.ApproverLeaveOfAbsenceFragment">
    <RelativeLayout
        android:paddingBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="24dp"
                android:textColor="@color/colorWhite"
                android:text="@string/formleave"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/formdetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>


            <TextView
                android:layout_marginTop="20dp"
                android:textSize="18dp"
                android:text="Employee Name:"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/TxtEmployeeName"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Data"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></RelativeLayout>

            <TextView
                android:textSize="18dp"
                android:text="Leave type:"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/TxtLeaveType"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Data"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></RelativeLayout>

            <TextView
                android:textSize="18dp"
                android:text="Leave date from:"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/TxtLeaveDateFrom"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Data"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></RelativeLayout>


            <TextView
                android:textSize="18dp"
                android:text="Leave date To:"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/TxtLeaveDateTo"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Data"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></RelativeLayout>


            <TextView
                android:textSize="18dp"
                android:text="Half day:"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/TxtLeaveHalfDay"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Data"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></RelativeLayout>

            <TextView
                android:textSize="18dp"
                android:text="Reason:"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/TxtLeaveReason"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Data"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></RelativeLayout>

            <TextView
                android:textSize="18dp"
                android:text="Form Status:"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/TxtFormStatus"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Data"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"></RelativeLayout>

            <TextView
                android:textSize="18dp"
                android:text="Date Submitted:"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/TxtFormDateSubmitted"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Data"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />




            <LinearLayout
                android:id="@+id/LinApproverActions"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView

                    android:textSize="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/approversresponse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose an action:"
                    android:textColor="@color/colorWhite" />

                <EditText
                    android:id="@+id/AEtAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext"
                    android:drawableRight="@drawable/ic_keyboard_arrow_down"
                    android:focusable="false"
                    android:hint="Please Select"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/whitegray" />

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/LinDisapprovalReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Disapproval Reason"
                        android:textColor="@color/colorWhite" />
                    <EditText
                        android:id="@+id/AEtDisapprovalReason"
                        android:textColor="@color/colorWhite"
                        android:padding="10dp"
                        android:background="@drawable/edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="6"
                        android:maxLength="250"
                        android:gravity="top|left"
                        android:inputType="textMultiLine|textCapSentences"/>
                </LinearLayout>

                <Button

                    android:layout_gravity="center_horizontal"
                    android:id="@+id/BtnSubmitAction"
                    android:layout_marginTop="25dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/custombutton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="Submit"/>


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>